2007-04-24  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/tiff.c: added support to load multi-page TIFF
	images as single layered image or multiple individual per-page
	images, after prompting the user for choice using a
	GimpPageSelector widget. Fixes the rest of bug #138495.

2007-04-24  Mukund Sivaraman  <muks@mukund.org>

	* libgimpwidgets/gimppageselector.c: updated the API documentation
	to indicate that the returned array is sorted.

2007-04-24  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/poppler.c: set the page selector target
	from lastvals before showing the dialog

2007-04-24  Sven Neumann  <sven@gimp.org>

	* Made 2.3.16 development release.

2007-04-24  Sven Neumann  <sven@gimp.org>

	* app/config/Makefile.am: fiddle with test_config_LDFLAGS to make
	test-config link again.

	* plug-ins/common/wind.c: increased MAX_STRENGTH to 100.

2007-04-24  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/screenshot.c: unset 'show-border' on the
	GtkNotebook that holds the hints.

2007-04-24  Sven Neumann  <sven@gimp.org>

	* app/plug-in/gimppluginprocedure.[ch]: use GQuark for locale and
	help domains to avoid duplicating the same strings many times.

	* app/plug-in/gimppluginmanager-restore.c: removed FIXME.

2007-04-24  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/gimppluginmanager-restore.c
	(gimp_plug_in_manager_restore): set the default plug-in locale
	domain on all GimpPlugInDefs which don't register a locale domain
	themselves. Fixes bug #430146.

2007-04-22  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/pdb/brush.pdb (brush_rename)
	* tools/pdbgen/pdb/gradient.pdb (gradient_rename)
	* tools/pdbgen/pdb/palette.pdb (palette_rename): don't allow the
	empty string as new name. Fixes bug #431845.

	* app/pdb/brush_cmds.c
	* app/pdb/gradient_cmds.c
	* app/pdb/palette_cmds.c: regenerated.

2007-04-21  Sven Neumann  <sven@gimp.org>

	* app/widgets/dbus-service.xml